examples/panics/panics.out
$ bal run panics.bal
error: division by 0
	at panics:divide(panics.bal:7)
	   panics:main(panics.bal:13)
